[project]
name = "sealkey"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "diffusers>=0.25",
    "transformers",
    "accelerate",
    "safetensors",
    "huggingface-hub",
    "einops",
    "opencv-python",
    "tqdm",
    "peft",
    "gradio>=4.0",
    "timm",
    "torchvision",
    "av",
    "scipy",
    "tensorboard",
]

[project.scripts]
generate = "src.generate:main"
